--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2"
   }
 }
