--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@playwright/test": "^1.51.1",
+    "@types/node": "^22.13.13",
+    "nodemon": "^3.1.9",
+    "playwright": "^1.51.1"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@vinejs/vine": "^3.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "eventemitter": "^0.3.3",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
-    "jsonwebtoken": "^9.0.2"
+    "express-rate-limit": "^7.5.0",
+    "express-redis-cache": "^1.1.3",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^11.1.0"
   }
 }
